Fix presale status and add word-wrap to explore module

--- a/components/explore/explore.module.scss
+++ b/components/explore/explore.module.scss
@@ -387,6 +387,7 @@
   }
   .row__6 {
     width: 84px;
+    word-wrap: break-word;
     a {
       color: var(--text-main);
     }
